Fix footer and discount spacing

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
   --cta-bg: var(--desat-blue);
 
   --text: var(--blue-gray);
-  --disc-txt: var(--light-red);
+  --disc-text: var(--light-red);
   --btn-txt: var(--pale-blue);
   --slider: var(--soft-cyan);
   --empty-slider: var(--light-gray);
@@ -79,6 +79,7 @@ body {
 
 .billing-wrap {
   justify-content: flex-end;
+  align-items: center;
   gap: 15px;
   margin: 0px 10px;
   padding: 10px;
@@ -118,7 +119,6 @@ body {
   padding: 10px;
 }
 
-/* TODO: Text Styles */
 .banner-title {
   font-size: 28px;
   color: var(--cte-bg);
@@ -133,11 +133,20 @@ body {
   font-weight: 800;
 }
 
+.billing-disc {
+  color: var(--disc-text);
+  background-color: var(--disc-bg);
+  font-size: 10px;
+  font-weight: 600;
+  border-radius: 10px;
+  padding: 5px;
+}
+
 /* Footer */
 .footer {
   font-size: 13px;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
   letter-spacing: 1.2px;
 }
 
